Bug 949294 - Mark the delegating frame as being IN_REFLOW while reflowing abs.pos. children.  r=roc